Adds current section nav highlighting
Updates the body nav of layout-test.html to set the nav items' classes
to active if the page URL matches the current section.
Updates style-test.css to put a steel blue underline on nav items with
the active class.

--- a/_layouts/layout-test.html
+++ b/_layouts/layout-test.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/projects">Projects</a></li>
-				<li><a href="/resume">Resume</a></li>
-				<li><a href="/blog">Blog</a></li>
+				<li {% if page.url == '/' %} class="active"{% endif %}><a href="/">Home</a></li>
+				<li {% if page.url contains '/projects/' %} class="active"{% endif %}><a href="/projects">Projects</a></li>
+				<li {% if page.url contains '/resume/' %} class="active"{% endif %}><a href="/resume">Resume</a></li>
+				<li {% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog">Blog</a></li>
 			</ul>
 		</nav>
 
