--- a/css/style-test.css
+++ b/css/style-test.css
@@ -12,6 +12,9 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+nav .active{
+    border-bottom:2px solid #4863A0;
+}
 a {
     text-decoration: none;
     color: #999;
